added a modal window using the maginificant-popup library for the video button on product page.  Linked the email-us button on product page to contact page.

--- a/style.css
+++ b/style.css
@@ -518,6 +518,12 @@ hr {
   text-align: center;
 }
 
+.product-page-button a h3 {
+  position: relative;
+  top: 50%;
+  transform: translateY(50%);
+}
+
 /*--------------------------------------*/
 /*        FOOTER                        */
 /*--------------------------------------*/
