--- a/style.css
+++ b/style.css
@@ -90,6 +90,11 @@ hr {
   display: inline-block;
 }
 
+.font-size-20em {
+  font-size: 1.3em;
+  margin: 20px 0 20px 0;
+}
+
 
 /*--------------------------------------*/
 /*        GLOBAL CLASSES                */
